apps/astra/overlays/qa/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astra-admin
spec:
  ingressClassName: traefik
  rules:
    - host: admin.astra-qa.ionflux.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: astra-admin
                port:
                  number: 8080
