apps/astra/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astra-api
spec:
  ingressClassName: traefik
  rules:
    - host: api.astra-qa.ionflux.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: astra-api
                port:
                  number: 8080
